# WinBridgeAgent

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  MCP.md  README.md  README_zh.md
.github/workflows/: cmake-multi-platform.yml  release.yml
docs/: API.md  AUTO_UPDATE_ANALYSIS.md  AuditLogger.md  Authentication.md  AutoUpdate.md  AutoUpdate_Complete.md  AutoUpdate_Phase1_Summary.md  AutoUpdate_Phase2_Summary.md  AutoUpdate_Phase4_Summary.md  AutoUpdate_Testing_Guide.md  BUGFIX_LANGUAGE_v0.4.0.md  BUGFIX_v0.4.0.md  CLIPBOARD_ENHANCED.md  CRASH_FIX_v0.4.0.md  ChromeDebug_Standalone_Strategy.md  CodeReview_Compilation_Fixes.md  CodeReview_Final_Response.md  CodeReview_Fixes.md  CodeReview_Response.md  CodeReview_Round3_Response.md  ConfigManager.md  DASHBOARD_TEST.md  DEPLOYMENT.md  DEPLOYMENT_v0.4.0.md  DOCS_INDEX.md  Dashboard.md  Dashboard_Screenshots.md  Dashboard_v0.3.0_Features.md  FEATURES.md  FEATURE_ROADMAP.md  FileOperations.md  MCP.md  MCP_CLIENT_SETUP.md  MULTI_COMPUTER_FEATURE_v0.4.2.md  PROCESS_MODEL.md  PowerManagement.md  ProcessManagement.md  QUICKSTART.md  QUICKSTART_AUTH.md  QWEN3_TTS_WEBAPI_MACOS.md  (+23 more)
include/: http_server.h  tray_app.h
include/services/: file_service.h
include/support/: settings_window_ids.h
resources/: README.md  translations.json
scripts/: build.sh  test_mcp.sh
src/: http_routes.cpp  http_server.cpp  main.cpp  mcp_handlers.cpp  mcp_sse.cpp  mcp_streamable.cpp  tray_app.cpp
src/services/: command_service.cpp  file_operation_service.cpp  file_service.cpp
src/support/: dashboard_window.cpp  localization_manager.cpp
tests/: CMakeLists.txt
tests/unit/: test_audit_logger.cpp
updater/: CMakeLists.txt  updater.cpp
